--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>mini-projeto-1</string>
+	<string>miniprojeto1</string>
 <key>CFBundleDisplayName</key>
-<string>mini-projeto-1</string>
+<string>miniprojeto1</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
